--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </div>
 <script>
 const params = {
-  salt: "b6Sqq8Kh8DebcLhQ+kKtIg==",
-  iv:   "62tUBxCPOVB1CdlE",
-  ct:   "ZLDn+5GgDlJ1SXT802aFHlz2mRcXFrNA8kQek95xHZLsC4ZNUBMIdcCwYOj1",
-  iter: 100000
+  "salt": "Zs/o1NSbjy5sFVAUiKdSVw==",
+  "iv": "nHoBqXs5G5ZhW7VU",
+  "ct": "w2JXIYm6wVBRC3Ur1QzcXjN2Xe3hSV0c4uRZrtjo",
+  "iter": 100000
 };
 
 const b64 = s => Uint8Array.from(atob(s), c => c.charCodeAt(0));
@@ -77,3 +77,4 @@ document.getElementById('pwd').addEventListener('keydown', e => {
 });
 </script>
 </html>
+
