--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2>Enter Password</h2>
   <p>パスワードを入力してください。</p>
   <input id="pwd" type="password" placeholder="password" />
-  <button id="go">Unlock</button>
+  <button id="go">Go</button>
   <div id="msg"></div>
   <div id="flag"></div>
 </div>
@@ -77,4 +77,5 @@ document.getElementById('pwd').addEventListener('keydown', e => {
 });
 </script>
 </html>
+
 
